--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,6 +40,7 @@ jobs:
     - name: Install requirements
       run: |
         python -m pip install --upgrade pip
+        pip install -r build-requirements.txt
         pip install -r package-requirements.txt
     - name: Build
       env:
