--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.10'
     - name: Install protoc
       uses: arduino/setup-protoc@v1
       with:
@@ -43,8 +43,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --upgrade build
         pip install -r build-requirements.txt
-        pip install -r package-requirements.txt
     - name: Build
       env:
         P_BASE: 'src/main/proto'
@@ -54,7 +54,7 @@ jobs:
         protoc -I=${P_BASE} --python_out=${P_BASE} ${P_BASE}/${DM_PATH}/*.proto
         touch ${P_BASE}/informaticsmatters/protobuf/__init__.py
         touch ${P_BASE}/${DM_PATH}/__init__.py
-        python setup.py bdist_wheel
+        python -m build --sdist --wheel --outdir dist/
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
