--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -53,7 +53,9 @@ jobs:
         DM_PATH: 'informaticsmatters/protobuf/datamanager'
       run: |
         pyroma .
-        protoc -I=${P_BASE} --python_out=${P_BASE} ${P_BASE}/${DM_PATH}/*.proto
+        for P_DIR in $(ls ${P_BASE}//informaticsmatters/protobuf); do
+            protoc -I=${P_BASE} --python_out=${P_BASE} ${P_BASE}/informaticsmatters/protobuf/${P_DIR}/*.proto;
+            touch ${P_BASE}/informaticsmatters/protobuf/${P_DIR}/__init__.py
+        done
         touch ${P_BASE}/informaticsmatters/protobuf/__init__.py
-        touch ${P_BASE}/${DM_PATH}/__init__.py
         python -m build --sdist --wheel --outdir dist/
