build: Better build

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -48,13 +48,13 @@ jobs:
     - name: Build
       env:
         P_BASE: 'src/main/proto'
-        DM_PATH: 'informaticsmatters/protobuf/datamanager'
+        I_PATH: 'informaticsmatters/protobuf'
       run: |
-        pyroma .
-        for P_DIR in $(ls ${P_BASE}//informaticsmatters/protobuf); do
-            protoc -I=${P_BASE} --python_out=${P_BASE} ${P_BASE}/informaticsmatters/protobuf/${P_DIR}/*.proto;
-            touch ${P_BASE}/informaticsmatters/protobuf/${P_DIR}/__init__.py
+        for P_DIR in $(ls -d ${P_BASE}/${I_PATH}/*/); do
+            protoc -I=${P_BASE} --python_out=${P_BASE} ${P_DIR}/*.proto;
+            touch ${P_DIR}/__init__.py
         done
+        touch ${P_BASE}/${I_PATH}/__init__.py
         python -m build --sdist --wheel --outdir dist/
     - name: Publish
       uses: pypa/gh-action-pypi-publish@release/v1
