--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,10 +18,6 @@ name: build
 
 on:
   push:
-    branches:
-    - '**'
-    tags-ignore:
-    - '**'
   schedule:
   # Build daily at 6:32am...
   - cron: '32 6 * * *'
@@ -35,11 +31,11 @@ jobs:
         - '3.11'
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '${{ matrix.python-version }}'
     - name: Install protoc
       uses: arduino/setup-protoc@v2
       with:
